<resources>
    <string name="key_geocoder">AIzaSyB5arKTYeMmuGE2YghHGfmnS1OeWPvPI0Q</string>
    <string name="maps_api_key">AIzaSyClQgsoSydzUdhQ-7MK4Pk3iFEieQFrLbs</string>

    <string name="app_name">МойкАвто</string>
    <string name="activity_login_title">Авторизация</string>
    <string name="activity_profile">Профиль</string>
    <string name="activity_register">Регистрация</string>
    <string name="activity_map_filter">Выбор услуги</string>
    <string name="activity_map">Карта</string>
    <string name="activity_service_details">Сервис</string>
    <string name="activity_service_list">Список</string>
    <string name="activity_service_details_wash">Автомойка</string>
    <string name="activity_service_details_repair">Шиномонтаж</string>

    <string name="splash_loading"><u>Загрузка…</u></string>

    <string name="hint_email">E-mail</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_phone">Номер телефона</string>
    <string name="hint_name_not_required">Имя, фамилия (необязательно)</string>
    <string name="hint_city">Город</string>
    <string name="hint_code">Код подтверждения</string>
    <string name="hint_car">Авто</string>
    <string name="hint_password_repeat">Подтверждение пароля</string>
    <string name="hint_enter_city">Введите Ваш город</string>

    <string name="btn_login">Войти</string>
    <string name="btn_register">Зарегистрироваться</string>
    <string name="btn_next">Далее</string>
    <string name="btn_continue">Продолжить</string>
    <string name="btn_skip">Пропустить</string>
    <string name="btn_order_history">История заказов</string>
    <string name="btn_my_car">Мое авто</string>
    <string name="btn_choose_service">Выбрать услугу</string>

    <string name="error_auth_phone">Ошибка. Попробуйте снова.</string>
    <string name="error_invalid_code">Неправильный код подтверждения</string>
    <string name="error_empty_password">Введите пароль</string>
    <string name="error_passwords_not_match">Пароли не совпадают</string>
    <string name="error_enter_city_and_car">Введите город и название автомобиля</string>
    <string name="error_register">Ошибка регистрации</string>
    <string name="error_login">Ошибка авторизации</string>
    <string name="enter_phone_and_password">Введите номер телефона и пароль</string>

    <string name="toast_empty_code">Введите код из смс</string>
    <string name="toast_empty_phone">Введите номер телефона</string>

    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="your_city">Ваш город:</string>
    <string name="contact_us"><u>Связаться с нами</u></string>
    <string name="create_route"><u>Проложить маршрут</u></string>
    <string name="service">Услуга:</string>
    <string name="btn_another_service">Другое</string>


    <string name="bottom_nav_list">Список</string>
    <string name="bottom_nav_map">Карта</string>
    <string name="bottom_nav_profile">Профиль</string>

    <string name="tv_service_title_one">Услуга:</string>
    <string name="tv_service_title_many">Услуги:</string>
    <string name="btn_show">Показать</string>
    <string name="btn_filters">Фильтры</string>
    <string name="btn_save">Сохранить</string>
    <string name="tv_working_hours">Часы работы:</string>
    <string name="tv_nearest_order">Ближайшая запись:</string>
    <string name="error_fetching_services">Ошибка при загрузке списка</string>
    <string name="error_loading_service_details">Ошибка при загрузке данных</string>
    <string name="tv_prices">Цены:</string>
    <string name="btn_create_route">Проложить маршрут</string>
    <string name="btn_create_order"><u>Записаться</u></string>
    <string name="btn_try_again">Попробовать снова</string>
    <string name="toast_order_adding_error">Произошла ошибка</string>
    <string name="toast_order_added">Запись успешно добавлена</string>
    <string name="activity_order_list">Мои записи</string>
    <string name="toast_order_active_fetch_error">Произошла ошибка</string>
    <string name="btn_move_order">Перенести</string>
    <string name="btn_cancel_order">Отменить</string>
    <string name="btn_to_main_screen"><u>На главный экран</u></string>
    <string name="fragment_order_active">Активные</string>
    <string name="fragment_order_history">История</string>
    <string name="tv_no_orders_history">История записей пуста</string>
    <string name="tv_no_orders_active">Список активных записей пуст</string>
    <string name="activity_car_list">Мое авто</string>
    <string name="hint_car_name">Название авто</string>
    <string name="hint_car_numbers">Номера авто</string>
    <string name="btn_add">Добавить</string>
    <string name="btn_add_car">Добавить авто</string>
    <string name="activity_car_add">Добавление авто</string>
    <string name="activity_car_edit">Авто</string>
    <string name="toast_car_added">Авто успешно добавлено</string>
    <string name="toast_car_adding_error">Ошибка при добавлении авто</string>
    <string name="btn_add_photo">Добавить фото</string>
    <string name="intent_select_photo">Выберите фото</string>
    <string name="loading_error">Ошибка при загрузке</string>
    <string name="order_move_error">Ошибка переноса записи</string>
    <string name="order_move_success">Запись перенесена</string>
    <string name="error">Ошибка</string>
    <string name="saved">Сохранено</string>
    <string name="dialog_title_cancel_order">Отменить запись?</string>
    <string name="dialog_message_cancel_order">Вы уверены, что хотите отменить запись?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="activity_route">Маршрут</string>
    <string name="btn_edit">Редактировать</string>
    <string name="btn_delete">Удалить</string>
    <string name="dialog_car_delete_title">Удалить авто?</string>
    <string name="dialog_car_delete_message">Это действие нельзя отменить. Вы уверены, что хотите удалить авто?</string>
    <string name="activity_contact">Связь с нами</string>
    <string name="toast_car_edited">Успех</string>
    <string name="btn_update">Обновить</string>
    <string name="btn_order_list">Мои записи</string>
    <string name="error_not_logged">Пожалуйста, авторизируйтесь</string>
    <string name="activity_feedback">Связь с нами</string>
    <string name="btn_send">Отправить</string>
    <string name="hint_feedback_text">Текст обращения</string>
    <string name="sent">Отправлено</string>
    <string name="activity_forgot_password">Восстановление пароля</string>
    <string name="btn_get_code">Получить код</string>
    <string name="password_changed">Пароль успешно изменен</string>
</resources>
