<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.rey.material.widget.ProgressView
        android:id="@+id/progress_view"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:visibility="invisible"
        app:pv_autostart="true"
        app:pv_circular="false"
        app:pv_progressMode="indeterminate"
        app:pv_progressStyle="@style/AppTheme.LinearProgress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_city"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:hint="@string/hint_city"
            android:inputType="text"
            android:paddingEnd="16dp"
            android:paddingStart="16dp" />

        <EditText
            android:id="@+id/et_car"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:hint="@string/hint_car"
            android:inputType="text"
            android:paddingEnd="16dp"
            android:paddingStart="16dp" />

        <com.rey.material.widget.Button
            android:id="@+id/btn_continue"
            style="@style/AppTheme.Button.Dark.Bold"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_accent"
            android:text="@string/btn_continue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:rd_style="@style/Material.Drawable.Ripple.Wave.Light" />

        <com.rey.material.widget.Button
            android:id="@+id/btn_skip"
            style="@style/AppTheme.Button.Light.Bold"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:text="@string/btn_skip"
            android:textColor="@color/material_drawer_dark_hint_text"
            android:textSize="14sp"
            android:textStyle="bold"
            app:rd_style="@style/Material.Drawable.Ripple.Wave.Light" />

        <TextView
            android:id="@+id/tv_error"
            style="@style/AppTheme.TextView.Error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            tools:text="Error" />
    </LinearLayout>
</LinearLayout>