<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="16dp">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edit_text_white_shadowed" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/spinner"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_white_shadowed"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_send"
            android:layout_below="@+id/et_email"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_white_shadowed"
            android:gravity="top"
            android:hint="@string/hint_feedback_text"
            android:inputType="textEmailAddress"
            android:paddingTop="16dp" />

        <com.rey.material.widget.Button
            android:id="@+id/btn_send"
            style="@style/AppTheme.Button.Dark.Bold"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_accent"
            android:text="@string/btn_send"
            android:textSize="18sp"
            android:textStyle="bold"
            app:rd_style="@style/Material.Drawable.Ripple.Wave.Light" />
    </RelativeLayout>
</LinearLayout>