<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="car"
            type="com.mojka.poisk.data.model.Car" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/et_car_name"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/edit_text_white_shadowed"
                    android:hint="@string/hint_car_name"
                    android:inputType="textCapSentences"
                    android:text="@={car.name}" />

                <EditText
                    android:id="@+id/et_car_numbers"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_text_white_shadowed"
                    android:hint="@string/hint_car_numbers"
                    android:inputType="text"
                    android:text="@={car.numbers}" />

                <com.rey.material.widget.Button
                    android:id="@+id/btn_add_photo"
                    style="@style/AppTheme.Button.Dark.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/btn_accent"
                    android:text="@string/btn_add_photo"
                    android:textSize="18sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clipToPadding="false"
                    tools:listitem="@layout/item_car_new" />

                <com.rey.material.widget.Button
                    android:id="@+id/btn_add"
                    style="@style/AppTheme.Button.Dark.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/btn_accent"
                    android:text="@string/btn_add"
                    android:textSize="18sp" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</layout>